<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/addressContainer"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/address"
                android:textSize="24sp"
                android:text="@string/location_label"
                android:paddingTop="80dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:id="@+id/updated_at"
                android:textSize="14sp"
                android:text="@string/updated_at_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <EditText
                android:id="@+id/cityInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/city_hint"
                android:inputType="text" />

            <Button
                android:id="@+id/btnFetchWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/get_weather" />


        </LinearLayout>
        <LinearLayout
            android:id="@+id/overviewContainer"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/status"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/status_clear_sky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:id="@+id/temp"
                android:textSize="90sp"
                android:fontFamily="sans-serif-thin"
                android:layout_gravity="center"
                android:text="@string/temperature_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/temp_min"
                    android:text="@string/temperature_min_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>
                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">

                </Space>
                <TextView
                    android:id="@+id/temp_max"
                    android:text="@string/temperature_max_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/weatherInfoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
<!--            android:layout_below="@id/overviewContainer">-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/sunrise"
                    app:tint="#FFF">

                </ImageView>

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content">

                </Space>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise_label"
                    android:textSize="12sp">

                </TextView>

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_placeholder"
                    android:textSize="14sp">

                </TextView>
            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content">

            </Space>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/sunset"
                    app:tint="#FFF">

                </ImageView>

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content">

                </Space>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset_label"
                    android:textSize="12sp">

                </TextView>

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_placeholder"
                    android:textSize="14sp">

                </TextView>
            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content">

            </Space>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#3CF1EBF1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/wind"
                    app:tint="#FFF">

                </ImageView>

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content">

                </Space>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_label"
                    android:textSize="12sp">

                </TextView>

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stat_placeholder"
                    android:textSize="14sp">

                </TextView>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp">
            </Space>


        </LinearLayout>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp">
        </Space>

        <!-- Button to Fetch Weather -->


        <LinearLayout
            android:id="@+id/detailsContainer"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure"
                        app:tint="#FFF">

                    </ImageView>
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">

                    </Space>
                    <TextView
                        android:textSize="12sp"
                        android:text="@string/pressure_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:id="@+id/pressure"
                        android:textSize="14sp"
                        android:text="@string/stat_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity"
                        app:tint="#FFF">

                    </ImageView>
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">

                    </Space>
                    <TextView
                        android:textSize="12sp"
                        android:text="@string/humidity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:id="@+id/humidity"
                        android:textSize="14sp"
                        android:text="@string/stat_placeholder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>
                <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:background="#3CF1EBF1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/info"
                    app:tint="#FFF">

                </ImageView>
                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content">

                </Space>
                <TextView
                    android:textSize="12sp"
                    android:text="@string/created_by_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>
                <TextView
                    android:id="@+id/info"
                    android:textSize="10sp"
                    android:text="@string/created_by_names"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>
            </LinearLayout>
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content">

            </Space>


        </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ProgressBar>
    <TextView
        android:id="@+id/errorText"
        android:layout_centerInParent="true"
        android:text="@string/error_generic"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

</RelativeLayout>
